--- a/tests/Dockerfile-ubuntu16.04
+++ b/tests/Dockerfile-ubuntu16.04
@@ -1,12 +1,12 @@
-FROM ubuntu:14.04
-MAINTAINER ANXS
+FROM ubuntu:16.04
+MAINTAINER OpenEarth
 
 # Setup system with minimum requirements + ansible
 RUN apt-get update -qq && \
     apt-get install -qq python-apt python-pycurl python-pip python-dev \
                         libffi-dev libssl-dev locales && \
     echo 'en_US.UTF-8 UTF-8' > /var/lib/locales/supported.d/local && \
-    pip install -q ansible==1.9.4
+    pip install -q ansible==2.0.0.2
 
 # Copy our role into the container, using our role name
 WORKDIR /tmp/postgresql
