--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ script:
   - mkdir -p data/openearth
   # Testing with docker (experimental)
   - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04 -v /var/data/openearth data/openearth .
-  - docker run -v /var/data/openearth data/openearth psql
+  # - docker run -v /var/data/openearth data/openearth psql
