--- a/.travis.yml
+++ b/.travis.yml
@@ -41,5 +41,5 @@ script:
 
   - mkdir -p data/openearth
   # Testing with docker (experimental)
-  - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04 -v /var/data/openearth data/openearth .
+  - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04 -w /var/data/openearth data/openearth .
   # - docker run -v /var/data/openearth data/openearth psql
