--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,6 @@ script:
   - ansible-playbook -i inventory tests/playbook.yml --connection=local --sudo -e "$ROLE_GLOBALS $ROLE_OPTIONS" > idempotence_out
   - ./tests/idempotence_check.sh idempotence_out
 
-  - mkdir -p data/openearth
   # Testing with docker (experimental)
-  - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04 -w /var/data/openearth data/openearth .
-  # - docker run -v /var/data/openearth data/openearth psql
+  - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04
+  - docker run -v /var/data/openearth:var/data/openearth psql
