--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ script:
 
   # Testing with docker (experimental)
   - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04
-  - docker run -v /var/data/openearth:var/data/openearth psql
+  - docker run -v /var/data/openearth:/var/data/openearth psql
