--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,8 @@
 # file: postgresql/defaults/main.yml
 
 # Basic settings
-postgresql_version: 9.3
+# altered to version 9.6
+postgresql_version: 9.6
 postgresql_encoding: 'UTF-8'
 postgresql_locale_parts:
   - 'en_US' # Locale
@@ -26,9 +27,9 @@ postgresql_database_owner: "{{ postgresql_admin_user }}"
 # Extensions
 postgresql_ext_install_contrib: no
 postgresql_ext_install_dev_headers: no
-postgresql_ext_install_postgis: no
+postgresql_ext_install_postgis: yes
 
-postgresql_ext_postgis_version: "2.1" # be careful: check whether the postgresql/postgis versions work together
+postgresql_ext_postgis_version: "2.3" # be careful: check whether the postgresql/postgis versions work together
 
 # List of databases to be created (optional)
 postgresql_databases: []
@@ -43,11 +44,13 @@ postgresql_users: []
 postgresql_user_privileges: []
 
 # pg_hba.conf
+# added 172.18.0.0/16 as trusted hosts
 postgresql_pg_hba_default:
   - { type: local, database: all, user: '{{ postgresql_admin_user }}', address: '', method: '{{ postgresql_default_auth_method }}', comment: '' }
   - { type: local, database: all, user: all, address: '',             method: '{{ postgresql_default_auth_method }}', comment: '"local" is for Unix domain socket connections only' }
-  - { type: host,  database: all, user: all, address: '127.0.0.1/32', method: '{{ postgresql_default_auth_method }}', comment: 'IPv4 local connections:' }
+  - { type: host,  database: all, user: all, address: '172.18.0.0/16', method: '{{ postgresql_default_auth_method }}', comment: 'IPv4 local connections:' }
   - { type: host,  database: all, user: all, address: '::1/128',      method: '{{ postgresql_default_auth_method }}', comment: 'IPv6 local connections:' }
+  - { type: host,  database: all, user: all, address: '127.0.0.1/32', method: '{{ postgresql_default_auth_method }}', comment: 'IPv4 local connections:' }
 
 postgresql_pg_hba_passwd_hosts: []
 postgresql_pg_hba_trust_hosts: []
@@ -76,9 +79,9 @@ postgresql_external_pid_file: "{{ postgresql_pid_directory }}/{{postgresql_versi
 #------------------------------------------------------------------------------
 # CONNECTIONS AND AUTHENTICATION
 #------------------------------------------------------------------------------
-
+#altered from localhost to listen on all addresses
 postgresql_listen_addresses:
-  - localhost
+  - '*'
 postgresql_port: 5432
 
 postgresql_max_connections: 100
