--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -157,3 +157,11 @@
     name: "{{ postgresql_service_name }}"
     state: restarted
   when: postgresql_configuration_pt1.changed or postgresql_configuration_pt2.changed or postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
+
+- name: PostgresSQL | Copy the run script for the docker container
+  template:
+    src: run.sh
+    dest: "/tmp/postgresql/run.sh"
+    owner: "{{ postgresql_service_user }}"
+    group: "{{ postgresql_service_group }}"
+    mode: 0770
