--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -31,6 +31,7 @@
   register: result
   changed_when: "'NOTICE' not in result.stderr"
 
+
 - name: PostgreSQL | Add hstore to the databases with the requirement
   become: yes
   become_user: "{{postgresql_service_user}}"
@@ -40,6 +41,8 @@
   failed_when: hstore_ext_result.rc != 0 and ("already exists, skipping" not in hstore_ext_result.stderr)
   changed_when: hstore_ext_result.rc == 0 and ("already exists, skipping" not in hstore_ext_result.stderr)
   when: item.hstore is defined and item.hstore
+  tags:
+    - create
 
 - name: PostgreSQL | Add uuid-ossp to the database with the requirement
   become: yes
@@ -51,12 +54,15 @@
   changed_when: uuid_ext_result.rc == 0 and ("already exists, skipping" not in uuid_ext_result.stderr)
   when: item.uuid_ossp is defined and item.uuid_ossp
 
+
 - name: PostgreSQL | Add postgis to the databases with the requirement
   become: yes
   become_user: "{{postgresql_service_user}}"
   shell: "{{ postgresql_bin_directory}}/psql {{item.name}} --username {{postgresql_admin_user}} -c 'CREATE EXTENSION IF NOT EXISTS postgis;'&&psql {{item.name}} -c 'CREATE EXTENSION IF NOT EXISTS postgis_topology;'"
   with_items: "{{postgresql_databases}}"
   when: item.gis is defined and item.gis
+  tags:
+    - create
 
 - name: PostgreSQL | add cube to the database with the requirement
   become: yes
@@ -64,6 +70,8 @@
   shell: "{{ postgresql_bin_directory}}/psql {{item.name}} --username {{ postgresql_admin_user }} -c 'create extension if not exists cube;'"
   with_items: "{{postgresql_databases}}"
   when: item.cube is defined and item.cube
+  tags:
+    - create
 
 - name: PostgreSQL | Add plpgsql to the database with the requirement
   become: yes
@@ -71,6 +79,9 @@
   shell: "{{ postgresql_bin_directory}}/psql {{item.name}} --username {{ postgresql_admin_user }} -c 'CREATE EXTENSION IF NOT EXISTS plpgsql;'"
   with_items: "{{postgresql_databases}}"
   when: item.plpgsql is defined and item.plpgsql
+  tags:
+    - create
+
 
 - name: PostgreSQL | add earthdistance to the database with the requirement
   become: yes
@@ -78,6 +89,8 @@
   shell: "{{ postgresql_bin_directory}}/psql {{item.name}} --username {{ postgresql_admin_user }} -c 'create extension if not exists earthdistance;'"
   with_items: "{{postgresql_databases}}"
   when: item.earthdistance is defined and item.earthdistance
+  tags:
+    - create
 
 - name: PostgreSQL | Add citext to the database with the requirement
   become: yes
@@ -88,3 +101,6 @@
   failed_when: citext_ext_result.rc != 0 and ("already exists, skipping" not in citext_ext_result.stderr)
   changed_when: citext_ext_result.rc == 0 and ("already exists, skipping" not in citext_ext_result.stderr)
   when: item.citext is defined and item.citext
+  tags:
+    - create
+
