--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,7 +31,7 @@ postgresql_ext_install_dev_headers: no
 postgresql_ext_install_postgis: yes
 
 postgresql_ext_postgis_version: "2.3" # be careful: check whether the postgresql/postgis versions work together
-
+postgresql_ext_geos_version: "v1c5"
 # List of databases to be created (optional)
 postgresql_databases: []
 
