--- a/tasks/extensions/postgis.yml
+++ b/tasks/extensions/postgis.yml
@@ -8,7 +8,7 @@
     update_cache: yes
     cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
   with_items:
-    - libgeos-c1v5
+    - libgeos-{{postgresql_ext_geos_version}}
     - postgis
     - "postgresql-{{postgresql_version}}-postgis-{{postgresql_ext_postgis_version}}"
     - "postgresql-{{postgresql_version}}-postgis-scripts"
