--- a/tasks/extensions/postgis.yml
+++ b/tasks/extensions/postgis.yml
@@ -1,6 +1,25 @@
 # file: postgresql/tasks/extensions/postgis.yml
 # editied libgeos-c1 to c1v5 because of a dependency issue in postgres 9.6
 
+- name: "Install libgeos for old ubuntu systems"
+  apt:
+    name: libgeos_v1
+    state: present
+    update_cache: yes
+    cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
+  when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version <= "14") or
+        (ansible_distribution == "Debian" and ansible_distribution_major_version <= "7")
+
+
+- name: "Install libgeos for newer Ubuntu systems"
+  apt:
+    name: libgeos_v1c5
+    state: present
+    update_cache: yes
+    cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
+  when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version > "14") or
+        (ansible_distribution == "Debian" and ansible_distribution_major_version > "7")
+
 - name: PostgreSQL | Extensions | Make sure the postgis extensions are installed
   apt:
     name: "{{item}}"
