--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -165,6 +165,11 @@
   ignore_errors: yes
   when: postgresql_configuration_pt1.changed or postgresql_configuration_pt2.changed or postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
 
+- name: PostgreSQL | Ensure the pid directory for PostgreSQL exists
+  file:
+    name: "/tmp/postgresql"
+    state: directory
+
 - name: PostgresSQL | Copy the run script for the docker container
   template:
     src: run.sh
