--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ script:
   - ansible-playbook -i inventory tests/playbook.yml --connection=local --sudo -e "$ROLE_GLOBALS $ROLE_OPTIONS"
 
   # Testing with docker (experimental)
-  - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04
-  - docker run -v /var/data/openearth:/var/data/openearth
+  - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04 .
+  - docker run -v /var/data/openearth:/var/data/openearth .
