--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
 
   # Play test (also create postgresql_data_directory)
   - ansible-playbook -i inventory tests/playbook.yml --connection=local --sudo -e "$ROLE_GLOBALS $ROLE_OPTIONS"
-
+  - mkdir postgresql
   # Testing with docker (experimental)
   - docker build -f tests/Dockerfile-ubuntu16.04 -t postgres_ubuntu16.04 .
-  - docker run -v /var/data/openearth:/var/data/openearth .
+  - docker run -v /var/data/openearth:/var/data/openearth
