--- a/tests/Dockerfile-ubuntu16.04
+++ b/tests/Dockerfile-ubuntu16.04
@@ -14,7 +14,8 @@ RUN apt-get update -qq && \
 #    pip install -q ansible==2.0.0.2
 # Copy our role into the container, using our role name
 WORKDIR /tmp/postgresql
-ADD postgresql/  /tmp/postgresql
+ADD postgresql  /tmp/postgresql
+ADD .  /tmp/postgresql
 
 # Run our play
 RUN echo localhost > inventory
