added barman user with replication role altered main.yml so pg_hba.conf allows connection from barman

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,9 +48,11 @@ postgresql_user_privileges: []
 postgresql_pg_hba_default:
   - { type: local, database: all, user: '{{ postgresql_admin_user }}', address: '', method: '{{ postgresql_default_auth_method }}', comment: '' }
   - { type: local, database: all, user: all, address: '',             method: '{{ postgresql_default_auth_method }}', comment: '"local" is for Unix domain socket connections only' }
-  - { type: host,  database: all, user: all, address: '172.18.0.0/16', method: '{{ postgresql_default_auth_method }}', comment: 'IPv4 local connections:' }
+  - { type: host,  database: all, user: all, address: '172.0.0.0/8', method: '{{ postgresql_default_auth_method }}', comment: 'IPv4 local connections:' }
   - { type: host,  database: all, user: all, address: '::1/128',      method: '{{ postgresql_default_auth_method }}', comment: 'IPv6 local connections:' }
   - { type: host,  database: all, user: all, address: '127.0.0.1/32', method: '{{ postgresql_default_auth_method }}', comment: 'IPv4 local connections:' }
+  - { type: host,  database: replication, user: barman, address: '172.0.0.0/8', method: 'md5', comment: 'IPv4 local connections:' }
+
 
 postgresql_pg_hba_passwd_hosts: []
 postgresql_pg_hba_trust_hosts: []
@@ -202,7 +204,7 @@ postgresql_max_worker_processes: 8
 
 # - Settings -
 
-postgresql_wal_level: minimal  # minimal, archive, hot_standby, or logical
+postgresql_wal_level: replica  # minimal, archive, hot_standby, or logical
 postgresql_fsync: on  # turns forced synchronization on or off
 
 # Synchronization level:
@@ -265,13 +267,13 @@ postgresql_archive_timeout: 0
 # Set these on the master and on any standby that will send replication data.
 
 # max number of walsender processes
-postgresql_max_wal_senders: 0
+postgresql_max_wal_senders: 2
 postgresql_wal_sender_delay: 1s     # walsender cycle time, 1-10000 milliseconds (<= 9.1)
 
-postgresql_wal_keep_segments:  0    # in logfile segments, 16MB each; 0 disables
+postgresql_wal_keep_segments:  32    # in logfile segments, 16MB each; 0 disables
 postgresql_replication_timeout: 60s # in milliseconds; 0 disables (<= 9.2)
 postgresql_wal_sender_timeout: 60s  # in milliseconds; 0 disables (>= 9.3)
-postgresql_max_replication_slots: 0 # max number of replication slots
+postgresql_max_replication_slots: 2 # max number of replication slots
 
 postgresql_track_commit_timestamp: off # (>= 9.5)
 
